--- a/frontend/create.html
+++ b/frontend/create.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Post - MiniBlog</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
 </head>
 <body>
@@ -16,6 +17,7 @@
                 <a href="create-post.html" class="active">Write</a>
                 <a href="login.html" id="loginBtn">Login</a>
                 <a href="#" id="logoutBtn" style="display: none;">Logout</a>
+                <a href="profile.html"><i class="ri-user-3-line"></i></a>
             </div>
         </nav>
     </header>
