--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MiniBlog - Home</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
 </head>
 <body>
+    
     <header>
         <nav class="navbar">
             <div class="logo">MiniBlog</div>
@@ -16,6 +18,7 @@
                 <a href="create.html">Write</a>
                 <a href="login.html" id="loginBtn">Login</a>
                 <a href="#" id="logoutBtn" style="display: none;">Logout</a>
+                <a href="profile.html"><i class="ri-user-3-line"></i></a>
             </div>
         </nav>
     </header>
@@ -34,6 +37,8 @@
                         <option value="technology">Technology</option>
                         <option value="lifestyle">Lifestyle</option>
                         <option value="travel">Travel</option>
+                        <option value="food">Food</option>
+                        <option value="health">Health</option>
                         <option value="other">Other</option>
                     </select>
                 </div>
