added profile and generate html for the profile

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -6,6 +6,7 @@
     <title>MiniBlog - Profile</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/profile.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
 </head>
 <body>
@@ -24,14 +25,29 @@
     <main>
         <section class="profile-section container">
             <div class="profile-header">
-                <div class="profile-avatar">
-                    <img src="assets/images/default-avatar.png" alt="User Avatar" />
+                <!-- <div class="profile-avatar">
+                    <img src="#" alt="User Avatar" />
+                </div> -->
+                
+        <div class="card">
+            <div class="infos">
+                <div class="image">
+                    <i class="ri-user-3-line"></i>
                 </div>
-                <div class="profile-info">
-                    <h1 class="username" id="username">John Doe</h1>
-                    <p class="user-email" id="userEmail">johndoe@example.com</p>
+                <div class="info">
+                    <div>
+                        <h1 class="username" id="username"></h1>
+                        <p class="user-email" id="userEmail"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+                <!-- <div class="profile-info">
+                    <h1 class="username" id="username"></h1>
+                    <p class="user-email" id="userEmail"></p>
                     <p class="user-bio" id="userBio">Lover of tech, coffee, and writing. Sharing thoughts on life and code.</p>
-                </div>
+                </div> -->
             </div>
 
             <div class="user-posts">
