--- a/frontend/create.html
+++ b/frontend/create.html
@@ -14,10 +14,9 @@
             <div class="logo">MiniBlog</div>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="create-post.html" class="active">Write</a>
+                <a href="create.html" class="active">Write</a>
                 <a href="login.html" id="loginBtn">Login</a>
-                <a href="#" id="logoutBtn" style="display: none;">Logout</a>
-                <a href="profile.html"><i class="ri-user-3-line"></i></a>
+                <a href="profile.html" id="logoutBtn" style="display: none;"><i class="ri-user-3-line"></i></a>
             </div>
         </nav>
     </header>
@@ -91,7 +90,7 @@
                 <h4>Quick Links</h4>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="create-post.html">Write a Post</a></li>
+                    <li><a href="create.html">Write a Post</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -106,28 +105,10 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 MiniBlog. All rights reserved.</p>
+            <p>&copy; 2025 MiniBlog. All rights reserved.</p>
         </div>
     </footer>
 
-    <div id="loginModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Login</h2>
-            <form id="loginForm">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" required>
-                </div>
-                <button type="submit" class="btn-primary">Login</button>
-            </form>
-            <p>Don't have an account? <a href="#" id="signupLink">Sign up</a></p>
-        </div>
-    </div>
 
     <script type="module" src="js/create.js"></script>
 </body>
