--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -25,29 +25,19 @@
     <main>
         <section class="profile-section container">
             <div class="profile-header">
-                <!-- <div class="profile-avatar">
-                    <img src="#" alt="User Avatar" />
-                </div> -->
                 
-        <div class="card">
-            <div class="infos">
-                <div class="image">
-                    <i class="ri-user-3-line"></i>
-                </div>
-                <div class="info">
-                    <div>
-                        <h1 class="username" id="username"></h1>
-                        <p class="user-email" id="userEmail"></p>
+                <div class="card">
+                    <div class="infos">
+                        <div class="image">
+                            <img src="assets/icons/profile.png" alt="No-profile">
+                        </div>
+                        <div class="profile-info">
+                            <h1 class="username" id="username"></h1>
+                            <p class="user-email" id="userEmail"></p> 
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
-                <!-- <div class="profile-info">
-                    <h1 class="username" id="username"></h1>
-                    <p class="user-email" id="userEmail"></p>
-                    <p class="user-bio" id="userBio">Lover of tech, coffee, and writing. Sharing thoughts on life and code.</p>
-                </div> -->
             </div>
 
             <div class="user-posts">
@@ -84,7 +74,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 MiniBlog. All rights reserved.</p>
+            <p>&copy; 2025 MiniBlog. All rights reserved.</p>
         </div>
     </footer>
 
