--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,9 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h4>About MiniBlog</h4>
-                <p>A simple platform for sharing ideas, stories, and knowledge.</p>
+                <p>MiniBlog is a clean and simple platform for sharing your thoughts with the world.
+                Whether it's a quick idea or a detailed story, we make blogging easy and enjoyable.
+                Built for creators who value simplicity, expression, and a clutter-free writing space.</p>
             </div>
             <div class="footer-section">
                 <h4>Quick Links</h4>
