--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,16 +29,8 @@
         <section class="posts-container">
             <div class="posts-header">
                 <h2>Latest Posts</h2>
-                <div class="filter">
-                    <select id="categoryFilter">
-                        <option value="all">All Categories</option>
-                        <option value="technology">Technology</option>
-                        <option value="lifestyle">Lifestyle</option>
-                        <option value="travel">Travel</option>
-                        <option value="food">Food</option>
-                        <option value="health">Health</option>
-                        <option value="other">Other</option>
-                    </select>
+                <div class="search">
+                    <input type="text" id="searchInput" placeholder="Search by category or keyword (e.g., food, lifestyle)">
                 </div>
             </div>
             
