--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
             </div>
             
             <div class="pagination">
-                <button id="loadMoreBtn">Load More</button>
+                <button id="loadMoreBtn" class="loading" disabled>Please wait,loading content...</button>
             </div>
         </section>
     </main>
